# securitymodule

./: .gitignore  Cargo.toml  Concept.md  Dockerfile  Integration.md  README.md  qmail_databse.md  render.yaml  tasks.md  verify_api.sh
benches/: benchmark_decrypt.rs  benchmark_encrypt.rs  benchmark_keygen.rs  benchmark_polymul.rs
src/: lib.rs  main.rs
src/api/: handlers.rs  routes.rs
src/crypto/: decrypt.rs  encrypt.rs  keygen.rs  mod.rs  tests.rs  utils.rs
src/models/: mod.rs
