[package]
name = "ring-lwe"
version = "0.1.8"
edition = "2021"
description = "Implements the ring learning-with-errors public key encrpytion scheme."
license = "MIT"
documentation = "https://docs.rs/ring-lwe"
homepage = "https://github.com/lattice-based-cryptography/ring-lwe"
repository = "https://github.com/lattice-based-cryptography/ring-lwe"
default-run = "ring-lwe"

[dependencies]
polynomial-ring = "0.5.0"
num-traits = "=0.2.19"
rand = "0.8.5"
rand_distr = "0.4.3"
ntt = "0.1.9"
base64 = "0.21"
bincode = "1.3"
clap = { version = "4.5.48", features = ["derive"] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark_polymul"
path = "benches/benchmark_polymul.rs"
harness = false

[[bench]]
name = "benchmark_keygen"
path = "benches/benchmark_keygen.rs"
harness = false

[[bench]]
name = "benchmark_encrypt"
path = "benches/benchmark_encrypt.rs"
harness = false

[[bench]]
name = "benchmark_decrypt"
path = "benches/benchmark_decrypt.rs"
harness = false